--- a/index.html
+++ b/index.html
@@ -3,9 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vitor Onofre Ramos</title>
 </head>
 <body>
-    
+    <h1> Vitor Onofre Ramos </h1>
+
+    <h2> Dados Pessoais </h2>
+    <img src="./img/emojinerd.webp" alt="emojinerd.webp" title="Nerd" width="350px">
+    <p> <strong>Nome: </strong>Vitor Onofre Ramos </p>
+    <p> <strong>Naturaidade: </strong>Brasileiro </p>
+    <p> <strong>Profisão: </strong>--- </p>
+    <p> <strong>Idade: </strong>18 anos </p>
+
+    <h2> Descrição breve sobre você </h2>
+    <p> Moro em Guarulhos, sou estudante de A.D.S (Análise e Desenvolvimento de Sistemas) na faculdade <b>FIAP</b> e já faz 1 mês que à frenquento. </p>
+    <p> Aqui estou aprendendo sobre Java, Python, Data-Base, Chat-bot, Experiencia de Usuário e por fim Html e Git. </p>
+    <p> Eu já pratiquei programação antes (até mesmo desenvolvi projetos em Html), mas eu sempre busquei tentra programar meu próprio jogo; <br>
+        busco aprender mais sobre lógica de programação para um dia seguir carreira na aréa de Back-end e no tempo livre dar vida ao meu <br>
+        sonho de criança de publicar meu próprio jogo.
+    </p>
+
+    <h2> Filmes favoritos </h2>
+    <ol>
+        <li>""</li>
+        <li>""</li>
+        <li>""</li>
+        <li>"The Thing (1982)"</li>
+        <li>"Don't Look Up"</li>
+        <li>"Spider-Man: Into the Spider-Verse"</li>
+    </ol>
+
+    <h2> Hobbies </h2>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+
+    <h2> Músicas que Gosta </h2>
+    <table border="">
+        <thead>
+            <th>Músicas</th>
+            <th>Cantor</th>
+        </thead>
+        <tbody>
+            <td>Teste</td>
+            <td>Teste</td>
+            <td>Teste</td>
+            <td>Teste</td>
+        </tbody>
+    </table>
+
+    <h2> Contéudo Apredido em Curso </h2>
+    <dl>
+        <dl></dl>
+        <dl></dl>
+    </dl>
+    <dl>
+        <dl></dl>
+        <dl></dl>
+        <dl></dl>
+    </dl>
+    <dl>
+        <dl></dl>
+        <dl></dl>
+        <dl></dl>
+        <dl></dl>
+    </dl>
+    <dl>
+        <dl></dl>
+        <dl></dl>
+        <dl></dl>
+    </dl>
 </body>
 </html>
